Disable Quick Connect button
Comment out the 'Quick Connect' button in port.html

--- a/port.html
+++ b/port.html
@@ -243,6 +243,6 @@
         </a>
     </footer>
 
-    <button class="quick-connect">Quick Connect</button>
+    <!-- <button class="quick-connect">Quick Connect</button> -->
 </body>
 </html>
