Comment out .quick-connect class in CSS
Comment out the .quick-connect CSS class.

--- a/port.html
+++ b/port.html
@@ -185,11 +185,11 @@
                 font-size: 1.1rem;
             }
 
-            .quick-connect {
+            /* .quick-connect {
                 bottom: 20px;
                 right: 20px;
                 padding: 12px 20px;
-            }
+            } */
         }
     </style>
 </head>
