Change background to GIF and update text colors
Updated the background to a GIF and changed text colors to improve visibility.

--- a/port.html
+++ b/port.html
@@ -13,8 +13,14 @@
 
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-            background-color: #f5f5f5;
-            color: #333;
+            /* UPDATED: Added Background GIF and changed text color to white */
+            background-image: url('Space Wow GIF by Feist.gif');
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
+            background-repeat: no-repeat;
+            background-color: #0b0b0b; /* Fallback color if gif fails */
+            color: #ffffff; 
             line-height: 1.6;
         }
 
@@ -35,6 +41,7 @@
             align-items: center;
             justify-content: center;
             overflow: hidden;
+            border: 3px solid rgba(255, 255, 255, 0.2); /* Added slight border for pop */
         }
 
         .profile-image img {
@@ -47,17 +54,20 @@
             font-size: 3rem;
             font-weight: 700;
             margin-bottom: 20px;
-            color: #1a1a1a;
+            color: #ffffff; /* UPDATED: White text */
+            text-shadow: 0 2px 4px rgba(0,0,0,0.5); /* Added shadow for readability */
         }
 
         .tagline {
             font-size: 1.2rem;
-            color: #666;
+            color: #e0e0e0; /* UPDATED: Light Gray text */
             margin-bottom: 40px;
+            text-shadow: 0 1px 2px rgba(0,0,0,0.5);
         }
 
         .tagline span {
             margin: 0 8px;
+            color: #667eea;
         }
 
         .social-links {
@@ -69,10 +79,11 @@
         }
 
         .social-links a {
-            color: #333;
+            color: #ffffff; /* UPDATED: White icons */
             font-size: 2rem;
             transition: all 0.3s ease;
             text-decoration: none;
+            filter: drop-shadow(0 2px 4px rgba(0,0,0,0.3));
         }
 
         .social-links a:hover {
@@ -83,19 +94,21 @@
         .schedule-btn {
             display: inline-block;
             padding: 12px 30px;
-            background: transparent;
-            color: #667eea;
+            background: rgba(0, 0, 0, 0.3); /* Slight dark background */
+            color: #ffffff; /* UPDATED: White text */
             text-decoration: none;
             border: 2px solid #667eea;
             border-radius: 8px;
             font-weight: 600;
             margin-bottom: 50px;
             transition: all 0.3s ease;
+            backdrop-filter: blur(4px); /* Cool blur effect */
         }
 
         .schedule-btn:hover {
             background: #667eea;
             color: white;
+            box-shadow: 0 0 15px rgba(102, 126, 234, 0.5);
         }
 
         nav {
@@ -103,21 +116,22 @@
             justify-content: center;
             gap: 50px;
             padding: 30px 0;
-            border-bottom: 2px solid #e0e0e0;
+            border-bottom: 2px solid rgba(255, 255, 255, 0.1); /* UPDATED: Fainter border */
             margin-bottom: 20px;
         }
 
         nav a {
-            color: #667eea;
+            color: #e0e0e0; /* UPDATED: Light text */
             text-decoration: none;
             font-size: 1.3rem;
             font-weight: 500;
             transition: all 0.3s ease;
             position: relative;
+            text-shadow: 0 1px 2px rgba(0,0,0,0.5);
         }
 
         nav a:hover {
-            color: #764ba2;
+            color: #667eea;
         }
 
         nav a::after {
@@ -138,7 +152,7 @@
         footer {
             text-align: center;
             padding: 40px 20px;
-            color: #666;
+            color: #aaa; /* UPDATED: Lighter footer text */
             font-size: 1.2rem;
         }
 
@@ -146,27 +160,6 @@
             color: #667eea;
             text-decoration: none;
         }
-/* 
-        .quick-connect {
-            position: fixed;
-            bottom: 30px;
-            right: 30px;
-            background: white;
-            color: #ff5722;
-            padding: 15px 25px;
-            border-radius: 30px;
-            box-shadow: 0 4px 20px rgba(0,0,0,0.15);
-            font-weight: 600;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            border: none;
-            font-size: 1rem;
-        }
-
-        .quick-connect:hover {
-            transform: translateY(-3px);
-            box-shadow: 0 6px 25px rgba(0,0,0,0.2);
-        } */
 
         @media (max-width: 768px) {
             h1 {
@@ -184,12 +177,6 @@
             nav a {
                 font-size: 1.1rem;
             }
-
-            /* .quick-connect {
-                bottom: 20px;
-                right: 20px;
-                padding: 12px 20px;
-            } */
         }
     </style>
 </head>
@@ -202,7 +189,7 @@
         <h1>Hrishitaa Kurchania</h1>
 
         <div class="tagline">
-            roboticist <span>|</span> engineer <span>|</span> Baker <span>|</span> Poet <span>
+            roboticist <span>|</span> engineer <span>|</span> Baker <span>|</span> Poet
         </div>
 
         <div class="social-links">
@@ -242,7 +229,5 @@
             </svg>
         </a>
     </footer>
-
-    <!-- <button class="quick-connect">Quick Connect</button> -->
 </body>
 </html>
