--- a/Hrishitaa.html
+++ b/Hrishitaa.html
@@ -13,13 +13,12 @@
 
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-            /* UPDATED: Added Background GIF and changed text color to white */
             background-image: url('Space Wow GIF by Feist.gif');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
             background-repeat: no-repeat;
-            background-color: #0b0b0b; /* Fallback color if gif fails */
+            background-color: #0b0b0b; 
             color: #ffffff; 
             line-height: 1.6;
         }
@@ -41,7 +40,7 @@
             align-items: center;
             justify-content: center;
             overflow: hidden;
-            border: 3px solid rgba(255, 255, 255, 0.2); /* Added slight border for pop */
+            border: 3px solid rgba(255, 255, 255, 0.2);
         }
 
         .profile-image img {
@@ -54,13 +53,13 @@
             font-size: 3rem;
             font-weight: 700;
             margin-bottom: 20px;
-            color: #ffffff; /* UPDATED: White text */
-            text-shadow: 0 2px 4px rgba(0,0,0,0.5); /* Added shadow for readability */
+            color: #ffffff;
+            text-shadow: 0 2px 4px rgba(0,0,0,0.5);
         }
 
         .tagline {
             font-size: 1.2rem;
-            color: #e0e0e0; /* UPDATED: Light Gray text */
+            color: #e0e0e0;
             margin-bottom: 40px;
             text-shadow: 0 1px 2px rgba(0,0,0,0.5);
         }
@@ -79,7 +78,7 @@
         }
 
         .social-links a {
-            color: #ffffff; /* UPDATED: White icons */
+            color: #ffffff;
             font-size: 2rem;
             transition: all 0.3s ease;
             text-decoration: none;
@@ -91,24 +90,45 @@
             transform: translateY(-3px);
         }
 
-        .schedule-btn {
-            display: inline-block;
-            padding: 12px 30px;
-            background: rgba(0, 0, 0, 0.3); /* Slight dark background */
-            color: #ffffff; /* UPDATED: White text */
-            text-decoration: none;
-            border: 2px solid #667eea;
-            border-radius: 8px;
-            font-weight: 600;
+        /* Container for the main action buttons */
+        .cta-container {
+            display: flex;
+            justify-content: center;
+            gap: 15px;
+            flex-wrap: wrap;
             margin-bottom: 50px;
-            transition: all 0.3s ease;
-            backdrop-filter: blur(4px); /* Cool blur effect */
         }
 
-        .schedule-btn:hover {
+        .schedule-btn, .cv-btn {
+            display: inline-block;
+            padding: 12px 30px;
+            text-decoration: none;
+            border-radius: 8px;
+            font-weight: 600;
+            transition: all 0.3s ease;
+            backdrop-filter: blur(4px);
+        }
+
+        .schedule-btn {
+            background: rgba(0, 0, 0, 0.3);
+            color: #ffffff;
+            border: 2px solid #667eea;
+        }
+
+        .cv-btn {
             background: #667eea;
             color: white;
-            box-shadow: 0 0 15px rgba(102, 126, 234, 0.5);
+            border: 2px solid #667eea;
+        }
+
+        .schedule-btn:hover, .cv-btn:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 5px 15px rgba(102, 126, 234, 0.4);
+        }
+
+        .cv-btn:hover {
+            background: #764ba2;
+            border-color: #764ba2;
         }
 
         nav {
@@ -116,12 +136,12 @@
             justify-content: center;
             gap: 50px;
             padding: 30px 0;
-            border-bottom: 2px solid rgba(255, 255, 255, 0.1); /* UPDATED: Fainter border */
+            border-bottom: 2px solid rgba(255, 255, 255, 0.1);
             margin-bottom: 20px;
         }
 
         nav a {
-            color: #e0e0e0; /* UPDATED: Light text */
+            color: #e0e0e0;
             text-decoration: none;
             font-size: 1.3rem;
             font-weight: 500;
@@ -152,7 +172,7 @@
         footer {
             text-align: center;
             padding: 40px 20px;
-            color: #aaa; /* UPDATED: Lighter footer text */
+            color: #aaa;
             font-size: 1.2rem;
         }
 
@@ -162,21 +182,11 @@
         }
 
         @media (max-width: 768px) {
-            h1 {
-                font-size: 2rem;
-            }
-
-            .tagline {
-                font-size: 1rem;
-            }
-
-            nav {
-                gap: 30px;
-            }
-
-            nav a {
-                font-size: 1.1rem;
-            }
+            h1 { font-size: 2rem; }
+            .tagline { font-size: 1rem; }
+            nav { gap: 30px; }
+            nav a { font-size: 1.1rem; }
+            .cta-container { flex-direction: column; align-items: center; }
         }
     </style>
 </head>
@@ -203,8 +213,6 @@
                     <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
                 </svg>
             </a>
-            
-           
             <a href="mailto:hrishitaa8@gmail.com" aria-label="Email">
                 <svg width="32" height="32" viewBox="0 0 24 24" fill="currentColor">
                     <path d="M0 3v18h24v-18h-24zm6.623 7.929l-4.623 5.712v-9.458l4.623 3.746zm-4.141-5.929h19.035l-9.517 7.713-9.518-7.713zm5.694 7.188l3.824 3.099 3.83-3.104 5.612 6.817h-18.779l5.513-6.812zm9.208-1.264l4.616-3.741v9.348l-4.616-5.607z"/>
@@ -212,7 +220,10 @@
             </a>
         </div>
 
-        <a href="https://calendly.com/hrishitaa8/30min" class="schedule-btn">Schedule Meeting</a>
+        <div class="cta-container">
+            <a href="https://docs.google.com/document/d/1gwRfEYeX59NtwxmM63m4rrR4mCBZ8-zRu16YYxPVU8M/export?format=pdf" class="cv-btn">Download CV</a>
+            <a href="https://calendly.com/hrishitaa8/30min" class="schedule-btn">Schedule Meeting</a>
+        </div>
 
         <nav>
             <a href="#writings">Writings</a>
