Update links in Hrishitaa.html for navigation

--- a/Hrishitaa.html
+++ b/Hrishitaa.html
@@ -224,11 +224,12 @@
             <a href="https://docs.google.com/document/d/1gwRfEYeX59NtwxmM63m4rrR4mCBZ8-zRu16YYxPVU8M/export?format=pdf" class="cv-btn">Download CV</a>
             <a href="https://calendly.com/hrishitaa8/30min" class="schedule-btn">Schedule Meeting</a>
         </div>
+        
 
         <nav>
-            <a href="#writings">Writings</a>
+            <a href="writings.html">Writings</a>
             <a href="https://github.com/HRISHITAA?tab=repositories">Projects</a>
-            <a href="#about">About</a>
+            <a href="https://github.com/HRISHITAA/About">About</a>
         </nav>
     </div>
 
