Update navigation link to point to Hrishitaa.html

--- a/review-paper-1.html
+++ b/review-paper-1.html
@@ -55,7 +55,7 @@
     <div class="container">
         <nav>
             <a href="writings.html" class="back-btn">← Back to Writings</a>
-            <a href="index.html">Home</a>
+            <a href="Hrishitaa.html">Home</a>
         </nav>
 
         <article>
