Update review titles in writings.html

--- a/writings.html
+++ b/writings.html
@@ -124,12 +124,12 @@
         <div class="review-list">
             
             <div class="review-item">
-                <a href="review-paper-1.html" class="review-title">Review: Deep Learning in Robotics (Example)</a>
+                <a href="review-paper-1.html" class="review-title">QGroundControl</a>
                 <span class="review-date">Dec 27, 2025</span>
             </div>
 
             <div class="review-item">
-                <a href="#" class="review-title">Review: Computer Vision Trends</a>
+                <a href="#" class="review-title">Review: </a>
                 <span class="review-date">Nov 14, 2025</span>
             </div>
 
