--- a/writings.html
+++ b/writings.html
@@ -111,7 +111,7 @@
 
     <div class="container">
         <nav>
-            <a href="index.html">Home</a>
+            <a href="Hrishitaa.html">Home</a>
             <a href="https://github.com/HRISHITAA?tab=repositories">Projects</a>
             <a href="index.html#about">About</a>
         </nav>
