Update profile image source in Hrishitaa.html

--- a/Hrishitaa.html
+++ b/Hrishitaa.html
@@ -193,7 +193,7 @@
 <body>
     <div class="container">
         <div class="profile-image">
-            <img src="Gemini_Generated_Image_hg7grkhg7grkhg7g-2.png" alt="Hrishitaa Kurchania">
+            <img src="Image-2.png" alt="Hrishitaa Kurchania">
         </div>
 
         <h1>Hrishitaa Kurchania</h1>
