Improve fusionCAD2URDF.html with navigation and metadata
Added navigation links and metadata to enhance user experience.

--- a/fusionCAD2URDF.html
+++ b/fusionCAD2URDF.html
@@ -81,8 +81,19 @@
 </head>
 <body>
 
-<div class="container">
-    <h1>Fusion 360 to ROS 2 URDF: The Real-World Guide</h1>
+<article>
+    <div class="container">
+        <nav>
+            <a href="writings.html" class="back-btn">← Back to Writings</a>
+            <a href="Hrishitaa.html">Home</a>
+        </nav>
+
+        <article>
+            <h1>Fusion 360 to ROS 2 URDF: The Real-World Guide</h1>
+            
+            <div class="meta">
+                Jan 19, 2026 • Read time: 10 mins 
+            </div>
     <p><strong>Complementary Documentation for:</strong> <a href="https://github.com/dheena2k2/fusion2urdf-ros2" target="_blank">fusion2urdf-ros2 by dheena2k2</a></p>
     
     <p>The standard README assumes you are a Linux pro and your CAD file is perfect. In reality, you will hit weird structure issues and terminal errors. This guide covers the "hidden steps" required to get a complex, nested Fusion 360 assembly into ROS 2.</p>
