--- a/writings.html
+++ b/writings.html
@@ -129,8 +129,8 @@
             </div>
 
             <div class="review-item">
-                <a href="#" class="review-title">Review: </a>
-                <span class="review-date">Nov 14, 2025</span>
+                <a href="fusionCAD2URDF.html" class="FusionCAD2URDf: complementary Document">Review: </a>
+                <span class="review-date">Jan 19, 2026</span>
             </div>
 
         </div>
