Fix link class name for FusionCAD2URDF review

--- a/writings.html
+++ b/writings.html
@@ -129,7 +129,7 @@
             </div>
 
             <div class="review-item">
-                <a href="fusionCAD2URDF.html" class="FusionCAD2URDf: complementary Document">Review: </a>
+                <a href="fusionCAD2URDF.html" class="riview-title">FusionCAD2URDf: complementary Document </a>
                 <span class="review-date">Jan 19, 2026</span>
             </div>
 
