Update image sources in Hrishitaa.html

--- a/Hrishitaa.html
+++ b/Hrishitaa.html
@@ -314,26 +314,26 @@
                     </div>
 
                     <div class="marquee-item">
-                        <img src="project1.jpg" alt="Project Girl 1">
+                        <img src="DSCF4683.JPG" alt="Project Girl 1">
                         <div class="caption-overlay">Built a solar rover prototype</div>
                     </div>
 
                     <div class="marquee-item">
-                        <img src="volunteer1.jpg" alt="Volunteer Work">
+                        <img src="IMG_1994.HEIC" alt="Volunteer Work">
                         <div class="caption-overlay">Volunteering at the shelter</div>
                     </div>
 
                     <div class="marquee-item">
-                        <img src="hobby2.jpg" alt="Hobby 2">
+                        <img src="demo-tactile.gif" alt="Hobby 2">
                         <div class="caption-overlay">Writing poetry in the park</div>
                     </div>
 
                     <div class="marquee-item">
-                        <img src="project2.jpg" alt="Project Girl 2">
+                        <img src="speaker.png" alt="Project Girl 2">
                         <div class="caption-overlay">Designing 3D printed arms</div>
                     </div>
                     <div class="marquee-item">
-                        <img src="hobby1.jpg" alt="Hobby">
+                        <img src="womeninrobotics1 .JPG" alt="Hobby">
                         <div class="caption-overlay">Teaching robotics to kids</div>
                     </div>
 
