Revise marquee items with new images and captions
Updated captions and images in the marquee section, removing some entries and adding new ones.

--- a/Hrishitaa.html
+++ b/Hrishitaa.html
@@ -321,41 +321,26 @@
 
                     <div class="marquee-item">
                         <img src="IMG_1994.HEIC" alt="Volunteer Work">
-                        <div class="caption-overlay">Volunteering at the shelter</div>
+                        <div class="caption-overlay"></div>
                     </div>
 
                     <div class="marquee-item">
                         <img src="demo-tactile.gif" alt="Hobby 2">
-                        <div class="caption-overlay">Writing poetry in the park</div>
+                        <div class="caption-overlay">Touch detection</div>
                     </div>
 
                     <div class="marquee-item">
-                        <img src="speaker.png" alt="Project Girl 2">
-                        <div class="caption-overlay">Designing 3D printed arms</div>
+                        <img src="womenrobotics.png" alt="Women in botbitc">
+                        <div class="caption-overlay">Organiised first Women in Robtics event</div>
                     </div>
                     <div class="marquee-item">
-                        <img src="womeninrobotics1 .JPG" alt="Hobby">
-                        <div class="caption-overlay">Teaching robotics to kids</div>
-                    </div>
-
-                    <div class="marquee-item">
-                        <img src="project1.jpg" alt="Project Girl 1">
-                        <div class="caption-overlay">Built a solar rover prototype</div>
+                        <img src="tactilesensor.png" alt="Touch Sensor">
+                        <div class="caption-overlay">Visual tactile sensor</div>
                     </div>
 
                     <div class="marquee-item">
-                        <img src="volunteer1.jpg" alt="Volunteer Work">
-                        <div class="caption-overlay">Volunteering at the shelter</div>
-                    </div>
-
-                    <div class="marquee-item">
-                        <img src="hobby2.jpg" alt="Hobby 2">
-                        <div class="caption-overlay">Writing poetry in the park</div>
-                    </div>
-
-                    <div class="marquee-item">
-                        <img src="project2.jpg" alt="Project Girl 2">
-                        <div class="caption-overlay">Designing 3D printed arms</div>
+                        <img src="enose.png" alt="E-Nose">
+                        <div class="caption-overlay">Built E-Nose prototype</div>
                     </div>
 
                 </div>
