Update animation duration and image source

--- a/Hrishitaa.html
+++ b/Hrishitaa.html
@@ -61,7 +61,7 @@
             flex-direction: column;
             gap: 20px;
             padding: 20px;
-            animation: scroll-vertical 15s linear infinite;
+            animation: scroll-vertical 25s linear infinite;
         }
 
         /* Pause entire scroll on hover */
@@ -310,7 +310,7 @@
                 <div class="marquee-track">
                     
                     <div class="marquee-item">
-                        <img src="finraygripper.JPG" alt="Finray_gripper">
+                        <img src="finraygripper.png" alt="Finray_gripper">
                         <div class="caption-overlay">A gripper inspired by this fins of fished, the internal connectord made of PLA grives it the flexibility to deform in accordance to the object it grips on.</div>
                     </div>
 
@@ -319,10 +319,7 @@
                         <div class="caption-overlay">Built a solar rover prototype</div>
                     </div>
 
-                    <div class="marquee-item">
-                        <img src="IMG_1994.HEIC" alt="Volunteer Work">
-                        <div class="caption-overlay"></div>
-                    </div>
+                    
 
                     <div class="marquee-item">
                         <img src="demo-tactile.gif" alt="Hobby 2">
