--- a/Hrishitaa.html
+++ b/Hrishitaa.html
@@ -13,7 +13,7 @@
 
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-            background-image: url('Space Wow GIF by Feist.gif');
+            background-image: url('Gemini_Generated_Image_cb6cxjcb6cxjcb6c.png');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
