--- a/Hrishitaa.html
+++ b/Hrishitaa.html
@@ -761,34 +761,188 @@
                 <h3>Technical Skills</h3>
                 <div class="skills-grid">
                     <div class="skill-category">
-                        <h4>Hardware Design</h4>
+                        <h4>Hardware & Electronics</h4>
                         <ul>
-                            <li>PCB Design & Fabrication</li>
-                            <li>Sensor Integration</li>
-                            <li>3D Modeling (CAD)</li>
-                            <li>Mechanical Prototyping</li>
-                            <li>Circuit Analysis</li>
+                            <li>PCB Design (Altium, Eagle, KiCAD)</li>
+                            <li>Microcontrollers (STM32, ESP32, Arduino)</li>
+                            <li>Sensor Integration (I2C, SPI, UART)</li>
+                            <li>Circuit Analysis & Debugging</li>
+                            <li>Power Management Systems</li>
                         </ul>
                     </div>
+
                     <div class="skill-category">
-                        <h4>Robotics</h4>
+                        <h4>Robotics & Control</h4>
                         <ul>
-                            <li>Robotic Manipulation</li>
-                            <li>Tactile Sensing</li>
-                            <li>Soft Robotics</li>
-                            <li>ROS/ROS2</li>
-                            <li>Motion Control</li>
+                            <li>ROS / ROS2 Navigation Stack</li>
+                            <li>Kinematics & Dynamics</li>
+                            <li>PID Control Systems</li>
+                            <li>Soft Robotics Fabrication</li>
+                            <li>Motor Control (BLDC, Stepper)</li>
                         </ul>
                     </div>
+
                     <div class="skill-category">
-                        <h4>Programming</h4>
+                        <h4>Software & Tools</h4>
                         <ul>
-                            <li>Python</li>
-                            <li>C/C++</li>
-                            <li>Embedded Systems</li>
-                            <li>Computer Vision</li>
-                            <li>Machine Learning</li>
+                            <li>C / C++ (Embedded)</li>
+                            <li>Python (Data Analysis, CV)</li>
+                            <li>MATLAB & Simulink</li>
+                            <li>SolidWorks / Fusion 360</li>
+                            <li>Git / Version Control</li>
+                        </ul>
+                    </div>
+
+                    <div class="skill-category">
+                        <h4>Fabrication</h4>
+                        <ul>
+                            <li>3D Printing (FDM, SLA)</li>
+                            <li>Laser Cutting</li>
+                            <li>Soldering (SMD/Through-hole)</li>
+                            <li>Silicon Molding & Casting</li>
+                            <li>Rapid Prototyping</li>
                         </ul>
                     </div>
                 </div>
             </div>
+        </div>
+
+        <div id="writings-page" class="page">
+            <h2 class="page-title">Technical Writings</h2>
+            <p class="page-subtitle">Articles, research notes, and thoughts on robotics technology</p>
+
+            <div class="projects-grid">
+                <div class="project-card" onclick="window.open('#', '_blank')">
+                    <div class="project-info">
+                        <h3>The Future of Soft Manipulation</h3>
+                        <p>An analysis of how bio-inspired compliant mechanisms are changing the landscape of agricultural robotics and delicate handling tasks.</p>
+                        <div class="project-tags">
+                            <span class="tag">Research</span>
+                            <span class="tag">Soft Robotics</span>
+                            <span class="tag">2025</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-card" onclick="window.open('#', '_blank')">
+                    <div class="project-info">
+                        <h3>Building Low-Cost Tactile Sensors</h3>
+                        <p>A step-by-step guide on fabricating resistive pressure sensors using conductive velostat and silicone for hobbyist robotics projects.</p>
+                        <div class="project-tags">
+                            <span class="tag">Tutorial</span>
+                            <span class="tag">Hardware</span>
+                            <span class="tag">2024</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-card" onclick="window.open('#', '_blank')">
+                    <div class="project-info">
+                        <h3>Integration of Vision and Touch</h3>
+                        <p>Explaining the sensor fusion algorithms required to combine visual data with tactile feedback for more robust object estimation.</p>
+                        <div class="project-tags">
+                            <span class="tag">Algorithms</span>
+                            <span class="tag">Sensor Fusion</span>
+                            <span class="tag">2024</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="about-page" class="page">
+            <h2 class="page-title">About Me</h2>
+            <div class="main-grid">
+                <div class="profile-section" style="order: 2;">
+                    <div class="profile-image">
+                        <img src="Image-2.png" alt="Hrishitaa Kurchania">
+                    </div>
+                </div>
+                
+                <div style="color: #d4b5cc; font-size: 1.1rem;">
+                    <p style="margin-bottom: 20px;">
+                        I am a Hardware Robotics Engineer passionate about bridging the gap between digital perception and physical interaction. My work focuses heavily on <strong>tactile sensing</strong>, <strong>bio-inspired design</strong>, and <strong>human-robot interaction</strong>.
+                    </p>
+                    <p style="margin-bottom: 20px;">
+                        With a background in Electrical Engineering and Robotics, I enjoy the messy intersection where hardware meets software. I thrive in the lab, whether I'm debugging a noisy signal on an oscilloscope, molding silicone for a soft gripper, or writing ROS nodes to visualize sensor data.
+                    </p>
+                    <p style="margin-bottom: 20px;">
+                        Currently, I am exploring how high-resolution tactile sensors can enable robots to perform dexterous manipulation tasks that were previously impossible.
+                    </p>
+                    <h3 style="color: #f4ebf1; margin: 30px 0 15px;">Education</h3>
+                    <div style="border-left: 3px solid #b76ea3; padding-left: 20px; margin-bottom: 20px;">
+                        <h4 style="color: #f4ebf1;">Master of Science in Robotics</h4>
+                        <p style="color: #b76ea3;">University Name Here</p>
+                        <p style="font-size: 0.9rem;">2022 - 2024</p>
+                    </div>
+                    <div style="border-left: 3px solid #b76ea3; padding-left: 20px;">
+                        <h4 style="color: #f4ebf1;">Bachelor of Engineering in Electronics</h4>
+                        <p style="color: #b76ea3;">University Name Here</p>
+                        <p style="font-size: 0.9rem;">2018 - 2022</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+    <footer>
+        <p>&copy; 2026 Hrishitaa Kurchania. Crafted with code and curiosity.</p>
+        <div class="social-links" style="margin-top: 20px; transform: scale(0.8);">
+            <a href="https://www.linkedin.com/in/hrishitaa-kurchania/" target="_blank">LinkedIn</a> • 
+            <a href="https://github.com/HRISHITAA" target="_blank">GitHub</a> • 
+            <a href="mailto:hrishitaa8@gmail.com">Email</a>
+        </div>
+    </footer>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const navItems = document.querySelectorAll('.nav-item, .nav-link');
+            const pages = document.querySelectorAll('.page');
+            const stickyNav = document.getElementById('stickyNav');
+
+            // Navigation Click Handler
+            navItems.forEach(item => {
+                item.addEventListener('click', () => {
+                    const targetPageId = item.getAttribute('data-page');
+                    
+                    // Remove active class from all items and pages
+                    document.querySelectorAll('.nav-item').forEach(nav => nav.classList.remove('active'));
+                    document.querySelectorAll('.nav-link').forEach(nav => nav.classList.remove('active'));
+                    pages.forEach(page => page.classList.remove('active'));
+
+                    // Add active class to matching nav items (both sticky and list)
+                    document.querySelectorAll(`[data-page="${targetPageId}"]`).forEach(activeItem => {
+                        activeItem.classList.add('active');
+                    });
+
+                    // Show target page
+                    const targetPage = document.getElementById(`${targetPageId}-page`);
+                    if (targetPage) {
+                        targetPage.classList.add('active');
+                        window.scrollTo({ top: 0, behavior: 'smooth' });
+                    }
+                });
+            });
+
+            // Sticky Nav Scroll Effect
+            window.addEventListener('scroll', () => {
+                if (window.scrollY > 50) {
+                    stickyNav.classList.add('scrolled');
+                } else {
+                    stickyNav.classList.remove('scrolled');
+                }
+            });
+
+            // Pause Marquee on Hover (JS fallback if CSS hover doesn't catch all cases)
+            const marqueeTrack = document.getElementById('marquee-track');
+            marqueeTrack.addEventListener('mouseenter', () => {
+                marqueeTrack.style.animationPlayState = 'paused';
+            });
+            marqueeTrack.addEventListener('mouseleave', () => {
+                marqueeTrack.style.animationPlayState = 'running';
+            });
+        });
+    </script>
+</body>
+</html>
