Add footer with copyright information

--- a/Hrishitaa.html
+++ b/Hrishitaa.html
@@ -42,7 +42,9 @@
 
         </div>
     </div>
-
+    <footer style="text-align: center; margin-top: 60px; padding: 20px; color: #888; font-size: 0.9rem;">
+        <p>&copy; 2026 Hrishitaa Kurchania. Crafted with code and curiosity.</p>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
