Change email and clean up footer in Hrishitaa.html
Updated email address and removed footer content.

--- a/Hrishitaa.html
+++ b/Hrishitaa.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="sticky-nav" id="stickyNav">
-        <a href="index.html" class="nav-item active">
+        <a href="Hrishitaa.html" class="nav-item active">
             <svg class="nav-icon" viewBox="0 0 24 24" fill="currentColor">
                 <path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"/>
             </svg>
@@ -48,7 +48,7 @@
 
             <div class="cta-buttons">
                 <a href="resume.pdf" target="_blank" class="btn primary-btn">Download CV</a>
-                <a href="mailto:hkurchania@gmail.com" class="btn secondary-btn">Schedule Meeting</a>
+                <a href="mailto:hrishitaa8@gmail.com" class="btn secondary-btn">Schedule Meeting</a>
             </div>
         </div>
         
@@ -82,23 +82,4 @@
                 <span>•</span>
                 <span>Computer Vision</span>
                 <span>•</span>
-                <span>Soft Robotics</span>
-                <span>•</span>
-                <span>Control Theory</span>
-                <span>•</span>
-            </div>
-        </div>
-    </div>
-
-    <footer>
-        <p>&copy; 2026 Hrishitaa Kurchania. Crafted with code and curiosity.</p>
-        <div class="social-links">
-            <a href="https://www.linkedin.com/in/hrishitaa-kurchania/" target="_blank">LinkedIn</a> • 
-            <a href="https://github.com/HRISHITAA" target="_blank">GitHub</a> • 
-            <a href="mailto:hrishitaa8@gmail.com">Email</a>
-        </div>
-    </footer>
-
-    <script src="script.js"></script>
-</body>
-</html>
+                <span>Soft Robotics
