Update CTA container and button classes in HTML

--- a/Hrishitaa.html
+++ b/Hrishitaa.html
@@ -46,7 +46,7 @@
                 Bridging the gap between <strong>digital intelligence</strong> and <strong>physical interaction</strong> through sensor fusion, soft robotics, and embedded systems.
             </p>
 
-            <div class="cta-container">
+            <div class="cta-buttons">
                 <a href="https://docs.google.com/document/d/1gwRfEYeX59NtwxmM63m4rrR4mCBZ8-zRu16YYxPVU8M/export?format=pdf" class="cv-btn">Download CV</a>
                 <a href="https://calendly.com/hrishitaa8/30min" class="schedule-btn">Schedule Meeting</a>
             </div>
