--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="sticky-nav" id="stickyNav">
-        <a href="index.html" class="nav-item">
+        <a href="Hrishitaa.html" class="nav-item">
             <svg class="nav-icon" viewBox="0 0 24 24" fill="currentColor">
                 <path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"/>
             </svg>
