Update project tags and remove unused project cards

--- a/writings.html
+++ b/writings.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="sticky-nav" id="stickyNav">
-        <a href="index.html" class="nav-item">
+        <a href="Hrishitaa.html" class="nav-item">
             <svg class="nav-icon" viewBox="0 0 24 24" fill="currentColor">
                 <path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"/>
             </svg>
@@ -48,7 +48,7 @@
                     <div class="project-tags">
                         <span class="tag">Tutorial</span>
                         <span class="tag">ROS 2</span>
-                        <span class="tag">2026</span>
+                        <span class="tag">Jan 2026</span>
                     </div>
                 </div>
             </a>
@@ -59,43 +59,12 @@
                     <div class="project-tags">
                         <span class="tag">Drones</span>
                         <span class="tag">Software</span>
-                        <span class="tag">2025</span>
+                        <span class="tag">Dec 2025</span>
                     </div>
                 </div>
             </a>
 
-            <a href="#" class="project-card">
-                <div class="project-info">
-                    <h3>The Future of Soft Manipulation</h3>
-                    <p>An analysis of how bio-inspired compliant mechanisms are changing the landscape of agricultural robotics and delicate handling tasks.</p>
-                    <div class="project-tags">
-                        <span class="tag">Research</span>
-                        <span class="tag">Soft Robotics</span>
-                        <span class="tag">2025</span>
-                    </div>
-                </div>
-            </a>
-
-            <a href="#" class="project-card">
-                <div class="project-info">
-                    <h3>Building Low-Cost Tactile Sensors</h3>
-                    <p>A step-by-step guide on fabricating resistive pressure sensors using conductive velostat and silicone for hobbyist robotics projects.</p>
-                    <div class="project-tags">
-                        <span class="tag">Tutorial</span>
-                        <span class="tag">Hardware</span>
-                        <span class="tag">2024</span>
-                    </div>
-                </div>
-            </a>
-
-            <a href="#" class="project-card">
-                <div class="project-info">
-                    <h3>Integration of Vision and Touch</h3>
-                    <p>Explaining the sensor fusion algorithms required to combine visual data with tactile feedback for more robust object estimation.</p>
-                    <div class="project-tags">
-                        <span class="tag">Algorithms</span>
-                        <span class="tag">Sensor Fusion</span>
-                        <span class="tag">2024</span>
+            
                     </div>
                 </div>
             </a>
