Refactor buttons and add footer with social links
Updated button classes for CV download and meeting scheduling links. Added footer with social links and copyright notice.

--- a/Hrishitaa.html
+++ b/Hrishitaa.html
@@ -47,8 +47,9 @@
             </p>
 
             <div class="cta-buttons">
-                <a href="https://docs.google.com/document/d/1gwRfEYeX59NtwxmM63m4rrR4mCBZ8-zRu16YYxPVU8M/export?format=pdf" class="cv-btn">Download CV</a>
-                <a href="https://calendly.com/hrishitaa8/30min" class="schedule-btn">Schedule Meeting</a>
+                <a href="https://docs.google.com/document/d/1gwRfEYeX59NtwxmM63m4rrR4mCBZ8-zRu16YYxPVU8M/export?format=pdf" class="btn primary-btn">Download CV</a>
+                
+                <a href="https://calendly.com/hrishitaa8/30min" class="btn secondary-btn">Schedule Meeting</a>
             </div>
         </div>
         
@@ -82,4 +83,23 @@
                 <span>•</span>
                 <span>Computer Vision</span>
                 <span>•</span>
-                <span>Soft Robotics
+                <span>Soft Robotics</span>
+                <span>•</span>
+                <span>Control Theory</span>
+                <span>•</span>
+            </div>
+        </div>
+    </div>
+
+    <footer>
+        <p>&copy; 2026 Hrishitaa Kurchania. Crafted with code and curiosity.</p>
+        <div class="social-links">
+            <a href="https://www.linkedin.com/in/hrishitaa-kurchania/" target="_blank">LinkedIn</a> • 
+            <a href="https://github.com/HRISHITAA" target="_blank">GitHub</a> • 
+            <a href="mailto:hrishitaa8@gmail.com">Email</a>
+        </div>
+    </footer>
+
+    <script src="script.js"></script>
+</body>
+</html>
