--- a/about.html
+++ b/about.html
@@ -59,14 +59,14 @@
 
                 <h3 style="color: #f4ebf1; margin: 30px 0 15px;">Education</h3>
                 <div style="border-left: 3px solid #b76ea3; padding-left: 20px; margin-bottom: 20px;">
-                    <h4 style="color: #f4ebf1; margin: 0;">Master of Science in Robotics</h4>
-                    <p style="color: #b76ea3; margin: 5px 0;">University Name Here</p>
-                    <p style="font-size: 0.9rem; margin: 0;">2022 - 2024</p>
+                    <h4 style="color: #f4ebf1; margin: 0;">Master’s in Mechatronics and Robotics engineering</h4>
+                    <p style="color: #b76ea3; margin: 5px 0;">New York University</p>
+                    <p style="font-size: 0.9rem; margin: 0;">2024 - 2026</p>
                 </div>
                 <div style="border-left: 3px solid #b76ea3; padding-left: 20px;">
-                    <h4 style="color: #f4ebf1; margin: 0;">Bachelor of Engineering in Electronics</h4>
-                    <p style="color: #b76ea3; margin: 5px 0;">University Name Here</p>
-                    <p style="font-size: 0.9rem; margin: 0;">2018 - 2022</p>
+                    <h4 style="color: #f4ebf1; margin: 0;">Bachelor's in Electrical Engineering</h4>
+                    <p style="color: #b76ea3; margin: 5px 0;">Symbiosis International Deemed University</p>
+                    <p style="font-size: 0.9rem; margin: 0;">2019 - 2023</p>
                 </div>
             </div>
         </div>
