Update project link in writings.html

--- a/writings.html
+++ b/writings.html
@@ -53,7 +53,7 @@
                 </div>
             </a>
 
-            <a href="qgc-guide.html" class="project-card"> <div class="project-info">
+            <a href="review-paper-1.html" class="project-card"> <div class="project-info">
                     <h3>QGroundControl Setup</h3>
                     <p>A comprehensive overview of setting up QGroundControl for MAVLink-enabled robots and PX4 stacks.</p>
                     <div class="project-tags">
